# Simple_GCS

./: .gitignore  CMakeLists.txt  License.txt  README.md
assets/: config.json
assets/proto_files/: drone_data.proto  drone_data_pb2.py  gcs_data.proto  gcs_data_pb2.py
cpack/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  GCS  Makefile  cmake_install.cmake  drone_data.pb.cc  drone_data.pb.h  gcs_data.pb.cc  gcs_data.pb.h  install_manifest.txt
cpack/_CPack_Packages/Linux/DEB/: GCS-1.0.1-Linux.deb
cpack/_CPack_Packages/Linux/DEB/GCS-1.0.1-Linux/: control  md5sums
rrr/: CMakeCache.txt  GCS  Makefile  cmake_install.cmake
src/: config_parser.h  data.h  globals.h  imageLoader.h  joystick_input.h  main.cpp  map.h  style.h  udp.cpp  udp.h
test/: dummy_sender_tester.py  recive_tester.py  sender.py  test.py  udpServerTest.py
tests/: recive_tester.py
